Correcting rendering of the box shadow on firefox

--- a/css/source/theme.scss
+++ b/css/source/theme.scss
@@ -107,7 +107,7 @@ code {
 .reveal section img {
   border: 0;
   background: none;
-  box-shadow: 0 0 #000;
+  box-shadow: none;
 }
 
 .reveal pre {
